# django-action-throttle

./: .gitignore  README.md  README.rst  __init__.py  admin.py  apps.py  models.py  pyproject.toml  setup.cfg  setup.py
action_throttle/: __init__.py  admin.py  apps.py  middleware.py  models.py  rest.py  throttle.py  throttle_settings.py  urls.py  utils.py
core/: settings.py  urls.py
django_action_throttle/: README.rst  setup.cfg
django_action_throttle/action_throttle/: apps.py  middleware.py  throttle.py
django_action_throttle/djangoactionthrottle.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
djangoactionthrottle.egg-info/: PKG-INFO
tests/blog/: db.sqlite3
tests/blog/app/: urls.py  views.py
tests/blog/blog/: settings.py  urls.py
