[tool.poetry]
name = "action-throttle"
version = "0.1.0"
description = ""
authors = ["Amir <amir4vx@gmail.com>"]
readme = "README.md"
packages = [{include = "action_throttle"}]

[tool.poetry.dependencies]
python = "^3.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
