[metadata]
name = django-action-throttle
version = file:version
author = Amirhosein Ghorbani
# author_email =
description = Django Action Throttle
long_description = file:README.rst
url = https://github.com/amir4v/django-action-throttle/
license = MIT License
keywords = django action throttle
classifiers =
    Development Status :: 4 - Beta
    Environment :: Web Environment
    Framework :: Django
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Topic :: Internet :: WWW/HTTP

[options]
include_package_data = true
packages = find:
install_requires =
    redis
    django-redis
